--- a/Puzzles/ArrayRotation/ArrayRotation.csproj
+++ b/Puzzles/ArrayRotation/ArrayRotation.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C36DFDE1-3C45-4FCE-B255-66629625F17A}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{2AB3535A-38FD-4760-886D-1D39A8EACAA2}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Puzzles</RootNamespace>
-    <AssemblyName>Puzzles</AssemblyName>
+    <RootNamespace>Puzzles.ArrayRotation</RootNamespace>
+    <AssemblyName>Puzzles.ArrayRotation</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -42,17 +40,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IPuzzle.cs" />
-    <Compile Include="PluginImporter.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Puzzle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PuzzleNature.cs" />
-    <Compile Include="Utilities.cs" />
+    <Compile Include="Solver.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <ProjectReference Include="..\Algebra\Algebra.csproj">
+      <Project>{edca4cd9-5f7d-450d-bc29-79ed03ea83b0}</Project>
+      <Name>Algebra</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Puzzles\Puzzles.csproj">
+      <Project>{c36dfde1-3c45-4fce-b255-66629625f17a}</Project>
+      <Name>Puzzles</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy /Y "$(TargetPath)" "$(SolutionDir)Puzzles\$(OutDir)"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
