--- a/Puzzles/ArrayRotationTests/ArrayRotationTests.csproj
+++ b/Puzzles/ArrayRotationTests/ArrayRotationTests.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{739CB062-E5D9-492E-B75F-B6A0E561E1C3}</ProjectGuid>
+    <ProjectGuid>{F07EC68C-2964-47EA-BC23-D2DBAFDD3FA7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Puzzles.SpiralArray.Tests</RootNamespace>
-    <AssemblyName>Puzzles.SpiralArray.Tests</AssemblyName>
+    <RootNamespace>Puzzles.ArrayRotation.Tests</RootNamespace>
+    <AssemblyName>Puzzles.ArrayRotation.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -54,17 +54,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Algebra\Algebra.csproj">
+      <Project>{edca4cd9-5f7d-450d-bc29-79ed03ea83b0}</Project>
+      <Name>Algebra</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ArrayRotation\ArrayRotation.csproj">
+      <Project>{2ab3535a-38fd-4760-886d-1d39a8eacaa2}</Project>
+      <Name>ArrayRotation</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Puzzles.Tests\PuzzlesTests.csproj">
       <Project>{5e76ad5a-6408-46a4-a95b-1673903360ba}</Project>
       <Name>PuzzlesTests</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Puzzles\Puzzles.csproj">
-      <Project>{c36dfde1-3c45-4fce-b255-66629625f17a}</Project>
-      <Name>Puzzles</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SpiralArray\SpiralArray.csproj">
-      <Project>{e82fbf66-4f40-44a2-812a-daf5eaf65434}</Project>
-      <Name>SpiralArray</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
