--- a/Puzzles/Puzzles.Tests/PuzzlesTests.csproj
+++ b/Puzzles/Puzzles.Tests/PuzzlesTests.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{739CB062-E5D9-492E-B75F-B6A0E561E1C3}</ProjectGuid>
+    <ProjectGuid>{5E76AD5A-6408-46A4-A95B-1673903360BA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Puzzles.SpiralArray.Tests</RootNamespace>
-    <AssemblyName>Puzzles.SpiralArray.Tests</AssemblyName>
+    <RootNamespace>Puzzles.Tests</RootNamespace>
+    <AssemblyName>PuzzlesTests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -50,22 +50,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="SolverTests.cs" />
+    <Compile Include="TestingUtilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Puzzles.Tests\PuzzlesTests.csproj">
-      <Project>{5e76ad5a-6408-46a4-a95b-1673903360ba}</Project>
-      <Name>PuzzlesTests</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Puzzles\Puzzles.csproj">
-      <Project>{c36dfde1-3c45-4fce-b255-66629625f17a}</Project>
-      <Name>Puzzles</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SpiralArray\SpiralArray.csproj">
-      <Project>{e82fbf66-4f40-44a2-812a-daf5eaf65434}</Project>
-      <Name>SpiralArray</Name>
-    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
