--- a/Puzzles/Puzzles/Puzzles.csproj
+++ b/Puzzles/Puzzles/Puzzles.csproj
@@ -52,6 +52,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Puzzles.DomainModel\Puzzles.DomainModel.fsproj">
+      <Project>{ecef6b86-0922-4474-bf0a-7c8dd951976c}</Project>
+      <Name>Puzzles.DomainModel</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
