--- a/Puzzles/SpiralArray/SpiralArray.csproj
+++ b/Puzzles/SpiralArray/SpiralArray.csproj
@@ -45,6 +45,10 @@
     <Compile Include="Solver.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Puzzles.DomainModel\Puzzles.DomainModel.fsproj">
+      <Project>{ecef6b86-0922-4474-bf0a-7c8dd951976c}</Project>
+      <Name>Puzzles.DomainModel</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Puzzles\Puzzles.csproj">
       <Project>{c36dfde1-3c45-4fce-b255-66629625f17a}</Project>
       <Name>Puzzles</Name>
